# vpx-gamepad

./: README.md  app.py  pyproject.toml
.github/workflows/: build_and_release.yml  main.yml
script/: poetry.py
vpx_gamepad/: __init__.py  vpx_gamepad.py
vpx_gamepad/enum/: gamepad_enum.py  vpx_keyboard_enum.py  xbox_enum.py
vpx_mapper/: __init__.py  vpx_mapper.py
vpx_mapper/enum/: xbox_enum.py
