[project]
name = "vpx-gamepad"
version = "0.12.0"
description = "Visual Pinball X - Gamepad Mapper"
authors = [{ name = "Douglas Panhota", email = "douglaspands@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["pygame (>=2.6.1,<3.0.0)", "pynput (>=1.7.7,<2.0.0)"]

[tool.poetry]
packages = [{ include = "vpx_gamepad" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pillow = "^11.1.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.11.1"
pywebview = "^5.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
build = "script.poetry:build"
lint = "script.poetry:lint"
format = "script.poetry:format"
start = "script.poetry:start"
maker_ico = "script.poetry:maker_ico"
